styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Cormorant", Cormorant, Garamond, serif;
}
/* MENU BAR */

@font-face {
  font-family: "Cormorant";
  font-style: normal;
  font-weight: 400;
  src: url("https://fonts.gstatic.com/s/cormorant/v21/H4c2BXOCl9bbnla_nHIA47NMUjsNbCVrFhFTc7Nq7S-r0Yr5dA.woff2") format('woff2'),
  url("files/Cormorant.ttf") format('truetype'),
  url("files/Cormorant.woff") format('woff'),
  url("files/Cormorant.svg") format('svg')
  url("files/Cormorant.eot") format('embedded-opentype');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

ul {
 list-style-type: none;
}
header {
  /* background-color: rgb(245, 248, 254); */
  background-color: rgb(255, 249, 246);
  /* background-image: linear-gradient(to right, white, #ffe1e1, white); */
  /* border-bottom: 1px solid red; */
}

footer {
  position: fixed;
  bottom: 0;
  font-size: 12px;
  padding: 8px;
  width: 100%;
  height: 30px;
  /* background-color: rgb(245, 248, 254); COOL OFFWHITE */
  background-color: rgb(255, 249, 246); /* WARM OFFWHITE */
  /* border-top: 1px dashed grey; */
}
footer {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: center;
}
footer p {
  text-align: right;
  color: rgb(239, 40, 40);
}
footer ul {
  list-style-type: none;
  text-decoration: none;
}
footer li {
  display: inline-block;
}

footer a {
  color: rgb(239, 40, 40);
  text-decoration: none;
}

hr {
  width: 94%;
  margin: auto;
  border: 0 solid grey;
}

sup {
  font-size: 12px;
  color: red;
}

.menu-bar, .mobile-menu-bar {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-around;
  align-items: center;
  padding: 10px;
}

.menu-bar a, .mobile-menu-bar a {
  color: rgb(239, 40, 40);
  text-decoration: none;
  font-family: Cormorant, "Cormorant", serif;
  font-size: 28px;
  transition: color .25s;
}

.menu-bar a img:hover, .mobile-menu-bar a img:hover {
  opacity: 0.75;
  transition: opacity .25s;
}

.menu-bar a:hover, .mobile-menu-bar a:hover {
  color: black;
}


@media (min-width: 1000px) {            /* to make resume better looking on mobile */
  .mobile-menu-bar {
    display: none;
  }
}
@media (max-width: 1000px) {
  .menu-bar {
    display: none;
  }
}


h1 {
  margin-top: 10px;
}

h3 {
  font-size: 16px;
  font-weight: normal;
}

@media (min-width: 700px) {
  .mobile-resume-details-container {
    display: none;
  }
}
@media (max-width: 700px) {
  .resume-details-container {
    display: none;
  }
}

.headshot-resume-container {
  display: flex;
  justify-content: space-around;
}

.headshot-resume {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  max-width: 1600px;
}

.resume-container {
  margin-left: 30px;
}

.resume-container a {
}

.resume-container p {
  font-size: 16px;
  margin-left: 20px;
}

.headshot-container {
  margin-left: 30px;
  margin-bottom: 30px;
}

table {
  font-size: 16px;
}

@media (min-width: 700px) {
  .acting-videos-container details {
    max-width: 512px;
  }
}

@media (max-width: 700px) {
    .acting-videos-container details {
      max-width: 100%;
    }
  }

.stills-item {
  position: relative;
  text-align: right;
}
.stills-item p {
  position: absolute;
  bottom: 16px;
  right: 10px;
  font-size: 16px;
  font-style: normal;
  opacity: 0;
}
.stills-item a:hover p {
  transition: 0.25s;
  opacity: 1;
  color: white;
  /*background-color: rgba(255, 0, 0, 0.25);
  width: 500px; */
}
/*
.videos-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.videos-item {
  display: inline-block;
  width: 512px;
  margin: 20px;
} */

details {
  padding: 5px;
  padding-top: 15px;
  padding-bottom: 15px;
  font-size: 24px;
  font-family: Cormorant,"Cormorant",  serif;
  /* border-bottom: 1px dashed red; */
}

details summary {
  transition: color .1s;
}

details summary:hover {
  color: rgb(239, 63, 40);
  cursor: pointer;
}

main {
  font-family: Cormorant, "Cormorant", serif;
  display: flex;
  justify-content: center;
  padding: 30px;
  min-height: 100vh;
  /* background-image: linear-gradient(to right, rgb(242, 244, 255), #e8eaf1, rgb(242, 244, 255)); COOL OFFWHITE */
  background-image: linear-gradient(to right, rgb(255, 246, 242), #f3edea, rgb(255, 246, 242));  /*#ffe1e1 #87cbff WARM OFFWHITE*/
}

main a {
  color: rgb(239, 40, 40);
  transition: color .1s;
}

main a:hover {
  color: black;
}

.content {
  max-width: 1200px;
  align-items: center;
}

.content details {
  max-width: 700px;
}

/*.contact-page-container {
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;
} */

.contact-list {
  font-size: 24px;
  width: 420px;
  margin: auto;
  margin-top: 50px;
}

form {
  position: relative;
  max-width: 420px;
  margin: 50px;
  text-align: center;
  background-color: transparent;
}

.form-input, .form-button {
  font-family: Cormorant,"Cormorant", serif;
  color: black;
  width: 420px;
  max-width: 420px;
  border: 1px solid black;
  margin: 5px;
  padding: 5px;
}

.form-button:hover {
  color: red;
  border: 1px solid red;
  cursor: pointer;
}

textarea {
  resize: vertical;
}

.about-page-container {
  display: flex;
  justify-content: center;
}

.about-content-container {
    margin-top: 10px;
    display: flex;
    justify-content: space-around;
    flex-flow: row wrap;
}

.about-content {
  margin-left: 50px;
  margin-right: 50px;
  margin-bottom: 25px;
  max-width: 500px;
}
.about-content p {
  font-size: 24px;
  text-align: justify;
}
.about-content h2 {
  font-size: 40px;
  margin-top: 25px;
  color: rgb(239, 40, 40);
}
.about-content a {
  color: rgb(239, 40, 40);
  text-decoration: none;
}
.black {
  color:black;
}
.videos-item h1 { /* for the music note at bottom of page */
  margin-bottom: 25px;
}

.acting-vids-stills-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.acting-videos-container {
  margin: 10px;
  margin-right: 30px;
  max-width: 500px;
}
.acting-stills-container {
  margin: 10px;
  margin-left: 30px;
  max-width: 500px;
}

